# kingdon

./: .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: deploy_pypi.yml  deploy_test_pypi.yml  generate_docs.yml  test.yml  test_coverage.yml
docs/: Makefile  arrays.rst  conf.py  index.rst  installation.rst  make.bat  module_docs.rst  readme.rst  usage.rst  workings.rst
docs/examples/: ex_2dcga_points_and_circles.ipynb  ex_2dpga_distances_and_angles.ipynb  ex_2dpga_fivebar.ipynb  ex_2dpga_inverse_kinematics.ipynb  ex_2dpga_points_and_lines.ipynb  ex_2dpga_project_and_reject.ipynb  ex_3dcga_intersections.ipynb  ex_3dpga_distances_and_angles.ipynb  ex_3dpga_points_and_lines.ipynb  ex_high_performance.ipynb  ex_performance.ipynb  ex_pointcloud.ipynb  ex_symbolic.ipynb  ex_symfit.ipynb  index.rst
examples/: graph_improvement.ipynb
kingdon/: __init__.py  algebra.py  blademap.py  calculus.py  codegen.py  graph.js  graph.py  matrixreps.py  multivector.py  multivector_json.py  numerical.py  operator_dict.py  polynomial.py  style.py  taperecorder.py
tests/: __init__.py  performance_check.py  test_blademap.py  test_calculus.py  test_expr_as_matrix.py  test_graph.py  test_kingdon.py  test_operator_dict.py  test_polynomial.py  test_pyga.py
